fix: spotify buttons on mobile, hopefully, fit now

--- a/public/app.css
+++ b/public/app.css
@@ -67,7 +67,7 @@ body {
 }
 
 .btn {
-    font-size: 18px;
+    font-size: 15px;
     line-height: 1.5;
     border-radius: 500px;
     padding: 12px 47px 8px;
@@ -97,7 +97,7 @@ body {
     -ms-user-select: none;
     user-select: none;
     text-decoration: none;
-} 
+}
 
 .btn-primary:focus,
 .btn-primary:hover{
